# WDM-AI-TEMIS

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  __init__.py  demo.py  example_usage.py  main.py  neo4j_docker.sh  pyproject.toml  save_image.py
app/: main.py  main_1.py
colpali_rag/: RAGModel.py  colpali.py  objects.py  requirements.txt
configs/: config.py
data/: Multihop_QA_tables.json  full_content_chatdoc_eval.json  generated_qa_pairs.json  qwen_results_final_updated.json  table_extractor.py
data-finetune/: extract_images.py  idx.txt  result_thangquang.json  table_extractor.py
data-finetune/final_data/: pymupdf_json_2.json
data-finetune/json/: result_locdinh.json  result_thangquang.json
data/QA_tables/: QA_rerank.json  final_label_QA.json  fixed_label_QA.json
data/data_vy/: idx.txt
data/final_data/: pymupdf_json.json
data/json/: result_vinhtran.json  result_vy.json
data/rerank/: data_rerank.json  data_rerank_nomd.json
eval_parsing_tool/: docling_eval.ipynb  eval_VLM.ipynb  eval_VLM_enrichdata.ipynb  prepare.ipynb
evaluate/: RAG.ipynb  prepare_documents.py  run_evaluation.py  semantic_chunking.py
evaluate/eval_merge_table/: eval_merge_table.py  eval_merge_table_score.txt  eval_merge_table_score_dict.json  eval_wdmpdfparser.py  merge_table_prompt.py  prompts.py  utils.py  wdmparser_evaluation_results.json
evaluate/eval_parsing_tool/: eval_VLM copy.ipynb  eval_VLM.ipynb  eval_VLM_enrichdata.ipynb  gemini.py  parsing_evaluation.py  pymupdf_eval copy.ipynb  pymupdf_eval.ipynb
libs/: common.py
notebooks/: table_transformer.ipynb
notebooks/Graphiti/: HybridGraphRAG-main.ipynb  HybridGraphRAG.ipynb  agent.ipynb
notebooks/Rag_Evaluator/: evaluator_fullpipeline_main.py  (+1 more)
output_img/: thangquang.txt
qdrant_db/: meta.json
src/: WDMParser.py  __init__.py  example_use_parser.py  extract_tables.py  extract_tables_2.py  file_loader.py  hybrid_rag.py  hybrid_rag_integrated.py  prompts.py  rag.py  reranker.py  setting.py  vectorstore.py  vi_du_debug_ai.py  vi_du_loc_dinh.py
table_filter/: README.md
trash/: vlm_enrich_results.json
utils/: __init__.py  bge_finetune.py  convert_table2text.py  enrich.py  extract_tables_llm.py  hybridgraphrag_utils.py  rag_evaluation.py  rag_evaluation_optimized.py  rag_metrics.py  rag_metrics_optimized.py  rag_qdrant_utils.py  reranker_utils.py  reranker_utils_optimized.py  vlm_enrich.py
(+79 files in other folders)
