[project]
name = "wdm-ai-temis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcembedding>=0.1.3",
    "cohere>=5.15.0",
    "fastembed>=0.7.0",
    "fitz>=0.0.1.dev2",
    "flagembedding>=1.3.5",
    "flashrank>=0.2.10",
    "frontend>=0.0.3",
    "google>=3.0.0",
    "google-genai>=1.18.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-qdrant>=0.2.0",
    "matplotlib>=3.10.3",
    "mixedbread-ai>=2.2.6",
    "pymupdf>=1.26.0",
    "qdrant-client>=1.14.2",
    "ragas>=0.2.15",
    "requests>=2.32.3",
    "tools>=1.0.2",
]
